[build-system]
requires = ["setuptools>=61.0", "pandas", "numpy", "matplotlib", "scikit-learn", "seaborn"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFiDEL"
version = "0.1.0"
authors = [
  { name="Sung-Cheol Kim", email="sungcheol.kim78@gmail.com" },
]
description = "python implementation of the Fermi-Dirac ensemble learning (FiDEL) method"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sungcheolkim78/pyFiDEL"
"Bug Tracker" = "https://github.com/sungcheolkim78/pyFiDEL/issues"
