[tool.poetry]
name = "pyfidel"
version = "0.1.0"
description = "python version of Fermi-Dirac ensemble learning (FiDEL)"
authors = ["Sung-Cheol Kim <sungcheol.kim78@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
scipy = "^1.10.0"
seaborn = "^0.12.2"
mkdocs = "^1.4.2"
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
mkdocs-literate-nav = "^0.6.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-material = "^9.0.12"
mkdocstrings = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 200

